--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -40,7 +40,7 @@
     <footer role="contentinfo" class="[ site-foot ] [ bg-light-shade ]">
       <div class="wrapper">
         <div class="[ measure-compact ] [ color-light-glare ]">
-          <p>Teléfono: <a href="tel:69 944 27 21">699442721</a></p>
+          <p>Teléfono: <a href="tel:634586724">634 58 67 24</a></p>
           <p>Correo: <a href="mailto:dragopsicologia@gmail.com">dragopsicologia@gmail.com</a></p>
           <a href="/politica-de-privacidad/">Política de privacidad</a>
         </div>
